--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12 my-2">
-					<img src="../explore1.jpeg" class="img-fluid" alt="explore">
+					<img src="../explore.jpeg" class="img-fluid" alt="explore">
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<h3>Explore Learn & Connect</h3>
